# NativeScripting

./: .gitignore  CMakeLists.txt  Documentation.md  Makefile  NativeScripting.cpp  NativeScripting.hpp  README.md  extractFunctions.sh  function.txt  lib.cpp  main  main.cpp
src/: NativeScripting.cpp
tests/: main.cpp
